Fix component overflow issue

--- a/frontend/src/components/CustomerView/CustomerView.css
+++ b/frontend/src/components/CustomerView/CustomerView.css
@@ -174,6 +174,7 @@
 .bodyPanel {
     display: flex;
     min-width: 100vw;
+    height: 90vh;
     /* height: 100%;
     bottom: 0px;
     align-items: stretch; */
